# FastVAC-usermode

./: Cargo.toml
02-hello-world/: Cargo.toml  Makefile.toml
02-hello-world/src/: lib.rs
dolboebdriver/: Cargo.toml  Makefile.toml
dolboebdriver/src/: lib.rs
dolboebusermode/: Cargo.toml
dolboebusermode/src/: cs_interface.rs  main.rs  ui.rs
overlay/examples/: taskmgr_overlay.rs
overlay/src/: lib.rs
shared/: Cargo.toml
shared/src/: kernel_request.rs  lib.rs
user/: Cargo.toml
user/src/: main.rs
windows-kernel-rs/: Cargo.toml
windows-kernel-rs/src/: driver.rs  io.rs  lib.rs  memory.rs  process.rs
windows-kernel-sys/: Cargo.toml
