[package]
name = "dolboebusermode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
overlay = { path = "../overlay" }
shared = { path = "../shared" }
windows = { version = "0.51.1", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
] }
obfstr = "0.4.3"
imgui = { version = "0.11", features = ["tables-api"] }
anyhow = "1.0.72"
libloading = "0.7.4"
log = "0.4.19"
env_logger = "0.10.0"