[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO"
] }
libc = {version = "0.2.151", features = ["std"]}
obfstr = "0.4.3"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }